fix(QueryResultList, QueryResultItem): fix bugs with scrollbar and large query numbers

--- a/frontend-37/src/features/playground/query-result-list/QueryResultItem.module.css
+++ b/frontend-37/src/features/playground/query-result-list/QueryResultItem.module.css
@@ -31,7 +31,7 @@
 }
 
 summary {
-  margin: 10px 10px 10px 25px;
+  margin: 10px 10px 10px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
